# teachers_ua

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json  pytest.ini
.github/workflows/: checking-pr.yml
backend/: .example.env
backend/src/: .coverage  config.py  db.py  injector_setup.py  module.py  pydiator_setup.py  request_context.py
backend/src/alembic/: env.py
backend/src/alembic/versions/: 2024_11_10_2009-c5b9be810820_initial_tables.py  2025_05_19_1206-daec5d21ad12_init_migration.py
backend/src/app/: __main__.py  exception_handles.py  exceptions.py  server.py
backend/src/depends/: auth_deps.py
backend/src/models/: __init__.py  users.py
backend/src/repositories/: user_repository.py
backend/src/routers/: __init__.py  users_router.py
backend/src/schemas/: users.py
backend/src/services/: user_service.py
backend/src/templates/: check.html
backend/src/tests/: conftest.py
backend/src/tests/users/: test_jwt_token.py  test_sign_in.py  test_sign_up.py
backend/src/use_cases/users/: create_user.py  refresh_token.py  user_login.py
backend/src/utils/: email.py  jwt_token.py
docker/: Dockerfile.backend  Dockerfile.frontend
frontend/: package.json
frontend/src/: App.css  App.tsx  index.tsx
frontend/src/api/: axios.ts
frontend/src/components/: Header.module.scss  Header.tsx  SideBar.tsx  Sidebar.module.scss
frontend/src/pages/: AboutUs.tsx  Home.tsx  Login.tsx  NotFound.tsx  SignIn.module.scss  SignIn.tsx  SignUp.tsx
frontend/src/store/: authSlice.ts  index.ts
